profile pics added

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </nav>
   <section id="profile">
     <div class="section__pic-container">
-      <img src="./assets/profile-pic.png" alt="Chirag profile picture" />
+      <img src="./assets/profile_pic.jpeg" alt="Chirag profile picture" class="profile-pic" />
     </div>
     <div class="section__text">
       <p class="section__text__p1">Hello, I'm</p>
@@ -74,7 +74,7 @@
     <h1 class="title">About Me</h1>
     <div class="section-container">
       <div class="section__pic-container">
-        <img src="./assets/about-pic.png" alt="Profile picture" class="about-pic" />
+        <img src="./assets/aboutus_pic.jpg" alt="Profile picture" class="about-pic" />
       </div>
       <div class="about-details-container">
         <div class="about-containers">
@@ -427,7 +427,7 @@
       </div>
       <div class="contact-info-container">
         <img src="./assets/instagram.png" alt="Instagram icon" class="icon contact-icon" />
-        <p><a href="https://www.linkedin.com">Instagram</a></p>
+        <p><a href="https://instagram.com/chiragsarda25?utm_source=qr&igshid=ZDc4ODBmNjlmNQ%3D%3D">Instagram</a></p>
       </div>
     </div>
   </section>
