Website link added

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CS25 Portfolio</title>
+  <title>Chirag Sarda</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="mediaqueries.css" />
 </head>
@@ -44,7 +44,9 @@
   </nav>
   <section id="profile">
     <div class="section__pic-container">
-      <img src="./assets/profile_pic.jpeg" alt="Chirag profile picture" class="profile-pic" />
+      <a href="https://chirag-25.github.io/CS25/">
+        <img src="./assets/profile_pic.jpeg" alt="Chirag profile picture" class="profile-pic" />
+      </a>
     </div>
     <div class="section__text">
       <p class="section__text__p1">Hello, I'm</p>
