logo for small screen added

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
     </div>
   </nav>
   <nav id="hamburger-nav">
-    <div class="logo">CS25</div>
+    <a href="https://chirag-25.github.io/CS25/">
+      <div ><img src="assets/logo.png" alt="CS25" class="logo-img"></div>
+    </a>
     <div class="hamburger-menu">
       <div class="hamburger-icon" onclick="toggleMenu()">
         <span></span>
