--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       <div class="about-containers">
         <div class="details-container">
           <a href="https://in.mathworks.com/" target="_blank" rel="noopener noreferrer"><h2 class="experience-sub-title">MathWorks India Private Limited</h2></a>
-          <img src="/assets/MathWorks-logo.jpg" alt="Mathworks_logo" class="logo-img">
+          <img src="./assets/MathWorks-logo.jpg" alt="Mathworks_logo" class="logo-img">
 
           <p><strong>Engineering Development Group Intern</strong></p>
           <p><em>
@@ -130,7 +130,7 @@
         </div>
         <div class="details-container">
           <a href="https://www.exprto.com/" target="_blank" rel="noopener noreferrer"><h2 class="experience-sub-title">Exprto</h2></a>
-          <img src="/assets/exprto_logo.png" alt="exprto logo" class="logo-img" >
+          <img src="./assets/exprto_logo.png" alt="exprto logo" class="logo-img" >
           <!-- https://www.exprto.com/ -->
           <p><strong>Jee Mentor Mentor</strong></p>
           <p><em>Exprto - Connecting JEE and NEET Aspirants to rankers</em></p>
