--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <p class="section__text__p2" id="text"><span id="auto-type"></span></p>
       <!-- <span id="text"></span> -->
       <div class="btn-container">
-        <button class="btn btn-color-2" onclick="window.open('./assets/resume.pdf')">
+        <button class="btn btn-color-2" onclick="window.open('./assets/Resume.pdf')">
           Download CV
         </button>
         <button class="btn btn-color-1" onclick="location.href='./#contact'">
